--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,8 @@
 export FIRECRACKER=/home/richard/bin/firecracker
 export FIRECRACKER_SOCKET=$(pwd)/out/firecracker.sock
+
+export UBUNTU_VERSION=bionic
+export IMAGE_ROOTFS=images/$UBUNTU_VERSION/$UBUNTU_VERSION.rootfs
+export KERNEL_IMAGE=images/$UBUNTU_VERSION/$UBUNTU_VERSION.vmlinux
+export INITRD=images/$UBUNTU_VERSION/$UBUNTU_VERSION.initrd
+export IMAGE_SIZE=10G
